update jobsearch yaml
